# mediaSecure

./: .gitignore  README.md  license.txt  main.py  pyproject.toml
.github/workflows/: MediaSecurePackage.yml  create-python-package.yml  python-publish.yml  upload-python-publish.yml
mediaSecure/: __init__.py  encodeB64.py  test_encodeB64.py
tests/: test_encodeB64.py
